--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,4 +1,6 @@
-specVersion: 0.0.1
+specVersion: 0.0.4
+description: Simple Subgraph for Ethereum
+repository: https://github.com/zKnight223/simple-subgraph
 schema:
   file: ./schema.graphql
 dataSources:
@@ -10,7 +12,7 @@ dataSources:
       abi: Greeter
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.5
+      apiVersion: 0.0.6
       language: wasm/assemblyscript
       entities:
         - Greeting
@@ -20,4 +22,11 @@ dataSources:
       eventHandlers:
         - event: Greeting(string)
           handler: handleGreeting
+      callHandlers:
+        - function: setGreeting(string)
+          handler: handleGreeting
+      blockHandlers:
+        - handler: handleBlock
+          filter:
+            kind: call
       file: ./src/greeter.ts
